@@ -1,3 +1,11 @@
+2010-11-09  Christopher Bratusek <zanghar@freenet.de>
+	* lisp/sawfish/wm/windows.jl: added window-role function
+				      merged get-window-by-name-re into get-window-by-name
+				      added possibility to get-window-by-name to check on icon-name
+				      merged get-window-by-class-re into get-window-by-class
+				      added get-window-by-id
+				      added get-window-by-role
+
 2010-11-06  Teika kazura <teika@lavabit.com>
 	* man/news.texi
 	* sawfish.el: supports let-loop indent.
